Changes in 1.6

 - IFileSystem changes:
   
   - Added TAR archive loader.
   
   - Renamed the following functions-
      IFileArchive::getArchiveType to getType
      IFileSystem::registerFileArchive to addFileArchive
      IFileSystem::unregisterFileArchive to removeFileArchive
      IFileArchive::openFile to createAndOpenFile

   - New enum, E_FILE_ARCHIVE_TYPE. getType on IArchiveLoader and IFileArchive now both return this.
   
   - IFileSystem::addFileArchive takes a parameter to specify the archive type rather always using the file extension. IFileSystem::addZipFileArchive, addFolderFileArchive and addPakFileArchive now use this but these functions are now marked as deprecated. Users should now use addFileArchive instead.

 - Fix highlighting in IGUIEditBox where kerning pairs are used in the font. For example in future italic, OS or other custom fonts.

 - IOSOperator::getTextFromClipboard returns now const c8* instead of c8* 

 - Support for copy&paste on linux (X11) added (fixing bug 2804014 found by Pan)

 - bugfix for 2795321 found by egrath: Don't rely anymore on broken XkbSetDetectableAutoRepeat.

 - bugfix: Use make_lower throughout for spritebank filenames (found and patched by Ion Dune)

 - bugfix: CMountPointReader::openFile no longer returns true for empty files. Corresponding test added.

 - Direct3D now also uses screen coordinates in 2d mode, just like OpenGL. This means that screen coords are going from 0..ScreenWidth and 0..ScreenHeight instead of -1..1.

 - ALT+F4 keypress now closes Windows SDL device

 - Allow Direct3D drivers in SDL, patch by Halifax

 - Added compiler error when attempting to compile with VC6.

 - Use setWindowTextA in Windows device for WIN64 platform, posted by veegun

 - ELL_ERROR log events are now created when shaders fail to compile or link, reported by Halan

 - irrList now uses irrAllocator, fixed by Nox

 - Added IGUIWindow::setDraggable and IGUIWindow::isDraggable, by Nox
